--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -462,6 +462,7 @@
       height:50px;
       width:50px;
       position:relative;
+      cursor: pointer;
       .close-img{
         height:40px;
         width:40px;
