--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -82,13 +82,13 @@
     border-style: solid;
     border-color: #e5be20;
   }
+}
 
-  .inactive{
-    background-color: #999;
-    border-style: solid;
-    border-color: #444;
-    color:#666;
-  }
+.gamebutton-inactive{
+  background-color: #999;
+  border-style: solid;
+  border-color: #444;
+  color:#666;
 }
 
 #background-image{
@@ -360,6 +360,8 @@
       border: 2px solid #e5be20;
       background-color: white;
       margin:10px auto;
+      cursor: pointer;
+      
       @include noselect();
       -webkit-backface-visibility: hidden;
     }
